# VEngine

./: .gitignore  Build_GL.py  CMakeLists.txt  README.md  cpp.hint
DX11_Test/: CMakeLists.txt  imgui_impl_win32.h  main.cpp
DX12_Test/: CMakeLists.txt  imgui_impl_dx12.cpp  imgui_impl_win32.cpp  main.cpp
Editor/: CMakeLists.txt  Editor.cpp  Editor.h  Window.h  imgui_impl_dx11.cpp  imgui_impl_win32.cpp  imgui_impl_win32.h  main.cpp
ImGui/: CMakeLists.txt
ImGui_Test/: CMakeLists.txt  ImGui_Test.cpp
Runtime/: CMakeLists.txt  RuntimeTest.cpp  test.cpp
Runtime/Core/: Context.h  Engine.cpp  Engine.h  EngineDefs.h  EventSystem.h  FileSystem.cpp  FileSystem.h  IModule.h  Log.cpp  Log.h  Logger.h  Settings.cpp  Settings.h  Stopwatch.h  Timer.cpp  Timer.h  VObject.h  Variant.h  add.cpp
Runtime/Math/: MathHelper.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Runtime/RHI/: RHI.h  RHI_API.cpp  RHI_API.h
Runtime/RHI/D3D11/: D3D11_Utility.h  RHI_D3D11.cpp  RHI_D3D11.h
Runtime/Resources/: IResources.cpp  IResources.h
V/: CMakeLists.txt  VEngine.cpp  VEngineLoop.cpp  VEngineLoop.h  VEngineLoop_Linux.cpp  VEngineLoop_SDL.cpp  VEngineLoop_Win32.cpp  main.cpp
V/Windows/: VEngineWindows.cpp  VLancher_Win32_DX11.cpp  Window.h  imgui_impl_dx11.h
VLib/: CMakeLists.txt  VEngine.cpp  VEngine.h  VLibGlibal.cpp  VLibGlobal.h
VLib/Core/: VEngine.cpp  VEngine.h  VEngineConfig.h  VIOHI.h  VObject.h  VSDL.cpp  VSDL2.h
VLib/HardwareRenderer/OpenGL/: VOpenGL3.cpp  VOpenGL3.h
VLib/ImGui/: imconfig.h
VLib/ImGui/ImGui_Platform/: imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_win32.cpp  imgui_impl_win32.h
VLib/ImGui_Imp/: imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_win32.cpp  imgui_impl_win32.h
VLib/Message/: Message.h
VLib/RHI/: RHI.cpp  RHI.h  RHI_Enum.h  RHI_RenderTarget.h  RHI_SwapChain.h
VLib/RHI/RHI_Imp/: RHI_DX11.cpp  RHI_Impl_DX11.cpp
VLib/RHI/RHI_Platform/: RHI_DX11.cpp  RHI_Platform_DX11.cpp  RHI_Platform_SDL_GL.cpp
VLib/Renderer/: VRenderer.h  VRenderer_ImGui.cpp  VRenderer_ImGui.h
VLib/TestDir/: CMakeLists.txt  VLibTest.cpp
